fix line spacing

--- a/mari-vanna-website/src/App.css
+++ b/mari-vanna-website/src/App.css
@@ -105,4 +105,5 @@ a {
 .dessertpage__menu-item-text {
   font-family: 'Lato', sans-serif;
   font-size: 18px;
+  margin-left: 5px;
 } 
